--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,94 @@
-.App {
-  text-align: center;
+body {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 14px;
+  line-height: 26px;
+  font-weight: 400;
+  letter-spacing: 0.5px;
+  color: #777;
+  overflow-x: hidden;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6{
+font-family: 'Raleway', sans-serif;
+color: #222;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+.home {
+  height: 700px;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.home-bg {
+  /* background-image: url("https://img.freepik.com/free-vector/mobile-app-development-background_73903-295.jpg?size=626&ext=jpg"); */
+	background-size: cover;
+	background-position: center center;
+	position: relative;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.home-bg:before {
+    content: "";
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(to top, #48c6ef 0%, #6f86d6 100%);
+    /* background: -webkit-linear-gradient(-45deg,rgba(88, 195, 255,.7) 0,rgba(0, 77, 230,.7) 40%,rgba(0, 59, 177,.7) 100%); */
 }
 
-.App-link {
-  color: #61dafb;
+
+.home-content {
+  margin-top: 250px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.home-content strong {
+  color: #005bea;
+  font-size: 30px;
+  background: #fff;
+  padding: 4px 18px;
+  border-radius: 5px;
+}
+
+.home-content h1 {
+  color: #fff;
+  font-size: 50px;
+  margin: 20px 0 5px;
+  font-weight: 600;
+}
+
+.home-content p {
+  color: #fff;
+  padding-bottom: 0;
+}
+
+.banner_social_link{
+  margin-top: 25px;
+  padding: 0px;
+}
+.banner_social_link li {
+    display: inline-block;
+    margin-right: 12px;
+}
+.banner_social_link li a{
+	color: #fff;
+	border: 1px solid #fff;
+	width: 40px;
+	height: 40px;
+	line-height: 40px;
+	border-radius: 50%;
+	text-align: center;
+	display: inline-block;
+	font-size: 14px;
+	transition: .5s;
+}
+.banner_social_link li a:hover{
+	background: #fff ;
+	border-color: #fff;
+	color: #1461ff;
 }
