--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@ color: #222;
 }
 
 .home-bg {
-  /* background-image: url("https://img.freepik.com/free-vector/mobile-app-development-background_73903-295.jpg?size=626&ext=jpg"); */
+  background-image: url(./images/bricks.jpg);
 	background-size: cover;
 	background-position: center center;
 	position: relative;
@@ -38,7 +38,8 @@ color: #222;
     bottom: 0;
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(to top, #48c6ef 0%, #6f86d6 100%);
+    background: rgb(0,0,0,0.6);
+    /* background-image: linear-gradient(to top, #48c6ef 0%, #6f86d6 100%); */
     /* background: -webkit-linear-gradient(-45deg,rgba(88, 195, 255,.7) 0,rgba(0, 77, 230,.7) 40%,rgba(0, 59, 177,.7) 100%); */
 }
 
@@ -92,3 +93,34 @@ color: #222;
 	border-color: #fff;
 	color: #1461ff;
 }
+
+h1 span {
+  color: black;
+  border-right: solid 4px #fff;
+}
+
+h1 span.lol {
+  color: blue;
+}
+
+h2, .item {
+  color: white;
+}
+
+.item {
+  overflow: hidden;
+  width: 100%;
+  transition: border 1s, width 2s;
+  white-space: nowrap;
+  border-right: solid 0px #fff;
+  
+}
+
+.item.hide {
+  border-right: solid 4px #fff;
+  width: 0%;
+}
+
+
+
+
